# CPPC

./: ChangeLog  Makefile.am  Makefile.in  README  configure.ac
Example/: Makefile  Makefile.am  Makefile.in  cppc_config.example  cppc_config.xml
Example/matgen/: Makefile  Makefile.am  Makefile.in  matgen.c
Example/src/: gauss-mpi-semantic.xml.in  gauss-mpi.c  gauss-semantic.xml.in  gauss.c
compiler/: CommonPathReferences.xml  CommonProperties.xml  Makefile.am  Makefile.in  build.xml
compiler/Sources/cppc/compiler/: Compiler.java
compiler/Sources/cppc/compiler/analysis/: CCommunicationAnalyzer.java  CExpressionAnalyzer.java  CSpecifierAnalyzer.java  CStatementAnalyzer.java  CSymbolicAnalyzer.java  CSymbolicExpressionAnalyzer.java  CommunicationAnalyzer.java  ExpressionAnalyzer.java  FortranCommunicationAnalyzer.java  FortranExpressionAnalyzer.java  FortranSpecifierAnalyzer.java  FortranStatementAnalyzer.java  FortranSymbolicAnalyzer.java  FortranSymbolicExpressionAnalyzer.java  ProcedureAnalyzer.java  SpecifierAnalyzer.java  StatementAnalyzer.java  SymbolicAnalyzer.java  SymbolicExpressionAnalyzer.java
compiler/Sources/cppc/compiler/cetus/: CppcCheckpointLoopPragma.java  CppcCheckpointPragma.java  CppcConditionalJump.java  CppcExecutePragma.java  CppcLabel.java  CppcNonportableFunctionMark.java  CppcNonportableMark.java  CppcPragmaStatement.java  CppcRegister.java  CppcRegisterPragma.java  CppcShutdownPragma.java  CppcStatement.java  CppcUnregisterPragma.java  DoubleLiteral.java  FormatStatement.java  IOCall.java  ImpliedDoLoop.java  MultiExpression.java  UnfoldedExpression.java
compiler/Sources/cppc/compiler/exceptions/: SymbolIsNotVariableException.java  SymbolNotDefinedException.java  TypeNotSupportedException.java
compiler/Sources/cppc/compiler/fortran/: CommonBlock.java  CommonDeclaration.java  ComplexSpecifier.java  ComputedGotoStatement.java  DataDeclaration.java  DimensionDeclaration.java  DoubleComplexSpecifier.java  ExternalDeclaration.java  FormatExpression.java  FortranArraySpecifier.java  FortranDoLoop.java  FortranPrintManager.java  FortranProcedureManager.java  ImplicitDeclarationManager.java  ImplicitRegister.java  IntrinsicDeclaration.java  ParameterDeclaration.java  SaveDeclaration.java  StringSpecifier.java  SubstringExpression.java  TypeDeclaration.java
compiler/Sources/cppc/compiler/transforms/shared/: BasicDataType.java  ComplexDataType.java  CppcRegisterManager.java  CppcRegisterModuleParser.java  CppcRegisterParser.java  DataType.java  ProcedureCharacterization.java  ProcedureParameter.java  ProcedureWalker.java  TypeManager.java  (+1 more)
compiler/Sources/cppc/compiler/utils/: CVariableSizeAnalizer.java  ConfigurationManager.java  FortranVariableSizeAnalizer.java  ObjectAnalizer.java  SetOperations.java  VariableSizeAnalizer.java  VariableSizeAnalizerFactory.java
compiler/Sources/cppc/util/dispatcher/: FunctionDispatcher.java
compiler/semantic-meta/: cppc-module.xml  fortran-cppc-module.xml  fortran-module.xml  fortran-mpi-module.xml  linux-module.xml  mpi-module.xml
m4/: lx_find_mpi.m4
patches/: cppc-0.8.1-datatypes.patch  cppc-0.8.1-plainparser.patch  cppc-0.8.1-writer.patch
src/: Makefile.am  Makefile.in
src/checkpointer/: checkpoint.cpp  checkpointer.cpp
src/compressor/: compressor.cpp  compressor_factory.cpp  no_compressor.cpp  zlib_compressor.cpp
src/controller/: controller.cpp
src/controller/actions/: add_loop_index_action.cpp  checkpoint_action.cpp  commit_call_image_action.cpp  context_pop_action.cpp  context_push_action.cpp  controller_helper.cpp  create_call_image_action.cpp  init_configuration_action.cpp  init_state_action.cpp  offset_set_action.cpp  register_action.cpp  register_descriptor_action.cpp  register_for_call_image_action.cpp  remove_loop_index_action.cpp  set_loop_index_action.cpp  shutdown_action.cpp  unregister_action.cpp  unregister_descriptor_action.cpp  update_descriptor_action.cpp
src/data/: call_image.cpp  context.cpp  cppc_array.cpp  cppc_basic.cpp  cppc_binary.cpp  cppc_file.cpp  data_type.cpp  data_type_factory.cpp  heap_context.cpp  loop_context.cpp  memory_block.cpp  register.cpp
src/include/: Makefile.am  Makefile.in  autoconf.h.in  autoconf.h.in~  cppc.h.in  cppcf.h
src/include/checkpointer/: checkpoint.h  checkpointer.h
src/include/compressor/: compressor.h  compressor_factory.h  no_compressor.h  zlib_compressor.h
src/include/controller/: controller.h
src/include/controller/actions/: add_loop_index_action.h  checkpoint_action.h  commit_call_image_action.h  context_pop_action.h  context_push_action.h  controller_helper.h  create_call_image_action.h  init_configuration_action.h  init_state_action.h  offset_set_action.h  register_action.h  register_descriptor_action.h  register_for_call_image_action.h  remove_loop_index_action.h  set_loop_index_action.h  shutdown_action.h  unregister_action.h  unregister_descriptor_action.h  update_descriptor_action.h
src/include/data/: call_image.h  context.h  cppc_array.h  cppc_basic.h  cppc_binary.h  cppc_file.h  cppc_types.h  data_type.h  data_type_factory.h  heap_context.h  loop_context.h  memory_block.h  register.h
src/include/util/communication/: communication_manager.h  mpi_communicator.h  no_communicator.h
src/include/util/configuration/: configuration_manager.h
src/include/util/filemanager/: directory_stream.h  file_system_manager.h  unix_descriptor_types.h  unix_filesystem_plugin.h
src/include/util/singleton/: singleton.h
src/include/util/xml/: cppc-config.dtd  plain_parser.h  xerces_sax_parser.h  xml_parser.h  xml_parser_factory.h
src/include/writer/: buffer.h  io_hdf5_writer.h  writer.h  writer_factory.h
src/interface/: cppc.cpp  cppcf.cpp  fortran-interface.f
src/util/communication/: mpi_communicator.cpp  no_communicator.cpp
src/util/configuration/: configuration_manager.cpp
src/util/filemanager/: unix_filesystem_plugin.cpp
src/util/xml/: plain_parser.cpp  xerces_sax_parser.cpp  xml_parser.cpp  xml_parser_factory.cpp
src/writer/: buffer.cpp  io_hdf5_writer.cpp  writer.cpp  writer_factory.cpp
(+74 files in other folders)
