## Process this file with automake to produce Makefile.in

#    This file is part of CPPC.
#
#    CPPC is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    CPPC is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with CPPC; if not, write to the Free Software
#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

AUTOMAKE_OPTIONS = subdir-objects

SUBDIRS = bin src compiler

EXTRA_DIST = Example/cppc_config.example Example/cppc_config.xml Example/src/gauss.c Example/src/gauss-semantic.xml.in \
	     Example/src/gauss-mpi.c Example/src/gauss-mpi-semantic.xml.in \
	     Example/Makefile.in Example/Makefile.am Example/matgen/Makefile.in Example/matgen/Makefile.am Example/matgen/matgen.c
